# asset-id

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  asset_id.cpp  asset_id.h  digit.cpp  digit.h  image_line.cpp  image_line.h  main.cpp  write_png.cpp  write_png.h
test_scenarios/multiple_inputs_all_errors/: data.txt
test_scenarios/multiple_inputs_all_ok/: data.txt
test_scenarios/multiple_inputs_multiple_errors/: data.txt
test_scenarios/non_writable_dest_dir/: data.txt
tests/: CMakeLists.txt  asset_id_tests.cpp  digit_tests.cpp  image_line_tests.cpp  write_png_tests.cpp
